basic buttons done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>TOP-Calculator</title>
 </head>
 <body>
-    
+    <div class="main-container">
+        <div class="screen"></div>
+        <div class="allButtons">
+            <button class="numberbutton" id="#button">1</button>
+            <button class="numberbutton" id="#button">2</button>
+            <button class="operatorbutton" id="#button">+</button>
+            <button class="operatorbutton" id="#button">-</button>
+            <button class="equalsbutton" id="#button">=</button>
+        </div>
+    </div>
 </body>
 </html>
