--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <div class="main-container">
         <div class="screen"></div>
         <div class="allButtons">
+            <button class="clearButton">AC</button>
             <button class="numberbutton" id="#button">1</button>
             <button class="numberbutton" id="#button">2</button>
             <button class="operatorbutton" id="#button">+</button>
             <button class="operatorbutton" id="#button">-</button>
             <button class="equalsbutton" id="#button">=</button>
+            <button class="negative">+/-</button>
         </div>
     </div>
 </body>
