--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="operatorbutton" id="#button">-</button>
             <button class="equalsbutton" id="#button">=</button>
             <button class="negative">+/-</button>
+            <button class="decimal">.</button>
         </div>
     </div>
 </body>
