new button structure

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <button class="numberbutton" id="#button">2</button>
             <button class="operatorbutton" id="#button">+</button>
             <button class="operatorbutton" id="#button">-</button>
+            <button class="operatorbutton" id="#button">*</button>
+            <button class="operatorbutton" id="#button">/</button>
+            <button class="operatorbutton" id="#button">%</button>
             <button class="equalsbutton" id="#button">=</button>
             <button class="negative">+/-</button>
             <button class="decimal">.</button>
