--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
             <button class="clearButton">AC</button>
             <button class="numberbutton" id="#button">1</button>
             <button class="numberbutton" id="#button">2</button>
+            <button class="numberbutton" id="#button">3</button>
+            <button class="numberbutton" id="#button">4</button>
+            <button class="numberbutton" id="#button">5</button>
+            <button class="numberbutton" id="#button">6</button>
+            <button class="numberbutton" id="#button">7</button>
+            <button class="numberbutton" id="#button">8</button>
+            <button class="numberbutton" id="#button">9</button>
+            <button class="numberbutton" id="#button">0</button>
             <button class="operatorbutton" id="#button">+</button>
             <button class="operatorbutton" id="#button">-</button>
             <button class="operatorbutton" id="#button">*</button>
             <button class="operatorbutton" id="#button">/</button>
-            <button class="operatorbutton" id="#button">%</button>
             <button class="equalsbutton" id="#button">=</button>
             <button class="negative">+/-</button>
             <button class="decimal">.</button>
