--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="screen"></div>
+        <div class="joint-screens">
+            <div class="previous-history"></div>
+            <div class="screen"></div>
+        </div>
         <div class="allButtons">
             <button class="clearButton">AC</button>
-            <button class="numberbutton" id="#button">1</button>
-            <button class="numberbutton" id="#button">2</button>
-            <button class="numberbutton" id="#button">3</button>
-            <button class="numberbutton" id="#button">4</button>
-            <button class="numberbutton" id="#button">5</button>
-            <button class="numberbutton" id="#button">6</button>
-            <button class="numberbutton" id="#button">7</button>
-            <button class="numberbutton" id="#button">8</button>
-            <button class="numberbutton" id="#button">9</button>
-            <button class="numberbutton" id="#button">0</button>
-            <button class="operatorbutton" id="#button">+</button>
-            <button class="operatorbutton" id="#button">-</button>
-            <button class="operatorbutton" id="#button">*</button>
-            <button class="operatorbutton" id="#button">/</button>
-            <button class="equalsbutton" id="#button">=</button>
-            <button class="negative">+/-</button>
-            <button class="decimal">.</button>
+            <button class="numberbutton" id="button">1</button>
+            <button class="numberbutton" id="button">2</button>
+            <button class="numberbutton" id="button">3</button>
+            <button class="numberbutton" id="button">4</button>
+            <button class="numberbutton" id="button">5</button>
+            <button class="numberbutton" id="button">6</button>
+            <button class="numberbutton" id="button">7</button>
+            <button class="numberbutton" id="button">8</button>
+            <button class="numberbutton" id="button">9</button>
+            <button class="numberbutton" id="button">0</button>
+            <button class="operatorbutton" id="button">+</button>
+            <button class="operatorbutton" id="button">-</button>
+            <button class="operatorbutton" id="button">*</button>
+            <button class="operatorbutton" id="button">/</button>
+            <button class="equalsbutton" id="button">=</button>
+            <button class="negative" id="button">+/-</button>
+            <button class="decimal" id="button">.</button>
         </div>
     </div>
 </body>
