--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button class="equalsbutton" id="button">=</button>
             <button class="negative" id="button">+/-</button>
             <button class="decimal" id="button">.</button>
+            <button class="cancelButton" id="button">X</button>
         </div>
     </div>
 </body>
