--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <button class="numberbutton" id="button">8</button>
             <button class="numberbutton" id="button">9</button>
             <button class="numberbutton" id="button">0</button>
-            <button class="operatorbutton" id="button">+</button>
-            <button class="operatorbutton" id="button">-</button>
-            <button class="operatorbutton" id="button">*</button>
-            <button class="operatorbutton" id="button">/</button>
-            <button class="equalsbutton" id="button">=</button>
-            <button class="negative" id="button">+/-</button>
-            <button class="decimal" id="button">.</button>
-            <button class="cancelButton" id="button">X</button>
+            <button class="operatorbutton" id="opbutton">+</button>
+            <button class="operatorbutton" id="opbutton">-</button>
+            <button class="operatorbutton" id="opbutton">*</button>
+            <button class="operatorbutton" id="opbutton">/</button>
+            <button class="equalsbutton" id="opbutton">=</button>
+            <button class="negative" id="opbutton">+/-</button>
+            <button class="decimal" id="opbutton">.</button>
+            <button class="cancelButton" id="opbutton">X</button>
         </div>
     </div>
 </body>
