--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Handjet&family=Lilita+One&family=Special+Elite&family=Urbanist&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="calculator.js" defer></script>
     <title>TOP-Calculator</title>
 </head>
@@ -21,7 +22,9 @@
             <button class="clearButton">AC</button>
 
             <div class="container1">
-                <button class="cancelButton" id="opbutton">X</button>
+                <button class="cancelButton" id="opbutton">
+                    <span class="material-symbols-outlined">arrow_back</span>
+                </button>
                 <button class="negative" id="opbutton">+/-</button>
             </div>
 
